--- a/pagina3.html
+++ b/pagina3.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Pandemias en el mundo</title>
     </head>
-    <body background="#3498db" id="home">
+    <body bgcolor="#3498db" id="home">
         <ol>
             <font face=courier size=5 color=#f6b93b>
             <li><a href="#texto3"><font face=courier color=#f6b93b>Viruela.</a></li>
