--- a/pagina3.html
+++ b/pagina3.html
@@ -5,7 +5,7 @@
         <title>Pandemias en el mundo</title>
     </head>
     <body bgcolor="#3498db" id="home">
-        <ol>
+        <ol start="3">
             <font face=courier size=5 color=#f6b93b>
             <li><a href="#texto3"><font face=courier color=#f6b93b>Viruela.</a></li>
             <li><a href="#texto4"><font face=courier color=#f6b93b>Gripe española.</a></li>
