--- a/pagina1.html
+++ b/pagina1.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Pandemias en el mundo</title>
     </head>
-    <body background="fondo.png">
+    <body bgcolor="#3498db">
         <p align="center"><font face=Courier size=7 color=#c0392b>Pandemias en el mundo</p>
         <p align="center"><img src="img1.png" width="550px" height="275px"></p>
         <p><font face=Cambria size=3 color=white></p>
