--- a/pagina4.html
+++ b/pagina4.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Pandemias en el mundo</title>
     </head>
-    <body background="fondo.png" id="home">
+    <body bgcolor="#3498db" id="home">
         <ol start="5">
             <font face=courier size=5 color=#f6b93b>
                 <li><a href="#texto5"><font face=courier color=#f6b93b>Gripe asiática.</a></li>
