--- a/pagina6.html
+++ b/pagina6.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Pandemias en el mundo</title>
     </head>
-    <body background="fondo.png">
+    <body bgcolor="#3498db">
         <p align="center"><font face=courier size=6 color=#ecf0f1><marquee direction=right behavior=alternate>Las pandemias durante la historia del mundo</marquee></p>
     </body>
 </html>
