--- a/pagina5.html
+++ b/pagina5.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Pandemias en el mundo</title>
     </head>
-    <body  background="fondo.png">
+    <body  bgcolor="#3498db">
         <p align=center><font face=Courier size=6px color=#2c3e50>Pandemias en el mundo</p>
         <table align=center cellspacing="1" cellpadding="3"  border="3">
         <tr align=center> 
